--- a/src/app/components/votelink/votelink.component.html
+++ b/src/app/components/votelink/votelink.component.html
@@ -1,6 +1,6 @@
 <ul class="list-inline">
-    <li><a (click)="upVoteArticle($event)" href="javascript:void(0);" class="link-black btn btn-sm btn-success"><i class="fa fa-thumbs-o-up margin-r-5"></i> Upvote</a></li>
-    <li><a (click)="downVoteArticle($event)" href="javascript:void(0);" class="link-black btn btn-danger btn-sm"><i class="fa fa-thumbs-o-down margin-r-5"></i> Downvote</a>
+    <li><a (click)="upVoteArticle()" href="javascript:void(0);" class="link-black btn btn-sm btn-success"><i class="fa fa-thumbs-o-up margin-r-5"></i> Upvote</a></li>
+    <li><a (click)="downVoteArticle()" href="javascript:void(0);" class="link-black btn btn-danger btn-sm"><i class="fa fa-thumbs-o-down margin-r-5"></i> Downvote</a>
     </li>
     <li class="pull-right">
         <app-points [points]='points'></app-points>
