--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="content-wrapper center">
 
         <!-- Main content -->
-        <section class="content" style="width:50%">
+        <section class="content">
             <h1>
                 Simple Reddit-Clone App
                 <small>using Angular and NgRx</small>
@@ -10,7 +10,7 @@
             <hr />
             <div class="row">
                 <!-- middle column -->
-                <div class="col-md-12">
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                     <!-- general form elements -->
                     <div class="box box-primary">
                         <div class="box-header with-border">
